Feat: store, admin 라이브러리 적용 및 오류 해결

--- a/admin-service/build.gradle
+++ b/admin-service/build.gradle
@@ -94,6 +94,9 @@ dependencies {
 
     implementation "org.springframework.cloud:spring-cloud-starter-loadbalancer"
 
+    implementation(project(":auto-time"))
+    implementation project(':auto-response')
+
 }
 
 tasks.named('test') {
