--- a/store-service/src/main/resources/application.properties
+++ b/store-service/src/main/resources/application.properties
@@ -9,7 +9,7 @@ eureka.instance.prefer-ip-address=true
 admin.base-url=http://admin-service
 
 
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:store_db}
 spring.datasource.username=${DB_USER}
@@ -27,3 +27,5 @@ management.endpoint.health.show-details=always
 
 google.ai.api.base-url=https://generativelanguage.googleapis.com
 
+logging.level.org.springframework.data.repository=DEBUG
+logging.level.org.springframework.data.jpa.repository.query=DEBUG
