--- a/admin-service/src/main/resources/application.properties
+++ b/admin-service/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.application.name=admin-service
 
 store.base-url=http://store-service
+spring.jpa.properties.hibernate.default_schema=admin
 
+customer.admin.base-url=http://localhost:8081
+manager.admin.base-url=http://localhost:8082
+store.admin.base-url=http://localhost:8085
 
 
 # Eureka
@@ -11,3 +15,7 @@ eureka.instance.prefer-ip-address=true
 # Actuator
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+
+logging.level.org.hibernate.tool.hbm2ddl=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.orm.jpa=DEBUG
