--- a/auto-time/build.gradle
+++ b/auto-time/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	// 공개 API에 노출(JpaRepository 상속) → api
 	api("org.springframework.data:spring-data-jpa")
 
+
 	// 컴파일만 필요(런타임은 소비자 앱이 가짐)
 	compileOnly("org.springframework.boot:spring-boot-autoconfigure")
 	compileOnly("org.springframework.boot:spring-boot-starter-web")
@@ -33,6 +34,12 @@ dependencies {
 	api("org.springframework.boot:spring-boot-starter-web")
 	compileOnly("org.projectlombok:lombok")
 	annotationProcessor("org.projectlombok:lombok")
+
+	// === QueryDSL (Jakarta) ===
+	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
+	annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
+	annotationProcessor 'jakarta.annotation:jakarta.annotation-api:2.1.1'
+	annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 }
 
 tasks.matching { it.name == "bootJar" }.configureEach { enabled = false }
