--- a/customer-service/build.gradle
+++ b/customer-service/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'org.springframework.security:spring-security-crypto'
 
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+    implementation project(":auto-time")
 }
 
 tasks.named('test') {
