--- a/customer-service/src/main/resources/application-docker.properties
+++ b/customer-service/src/main/resources/application-docker.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=8082
 spring.application.name=customer-service
 
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
@@ -20,3 +20,5 @@ management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
 logging.level.com.eatcloud.customerservice=DEBUG
+logging.level.org.springframework.core.env=DEBUG
+logging.level.org.springframework.boot.context.config=DEBUG
