--- a/customer-service/src/main/resources/application-docker.properties
+++ b/customer-service/src/main/resources/application-docker.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.sql.init.mode=always
@@ -22,3 +22,4 @@ management.endpoint.health.show-details=always
 logging.level.com.eatcloud.customerservice=DEBUG
 logging.level.org.springframework.core.env=DEBUG
 logging.level.org.springframework.boot.context.config=DEBUG
+
