--- a/customer-service/src/main/resources/application-docker.properties
+++ b/customer-service/src/main/resources/application-docker.properties
@@ -9,12 +9,13 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:db/schema.sql
+spring.sql.init.continue-on-error=false
 spring.jpa.defer-datasource-initialization=true
 
-spring.data.redis.host=${REDIS_HOST}
-spring.data.redis.port=6379
+spring.data.redis.cluster.nodes=${REDIS_HOST}:6379
+spring.data.redis.cluster.max-redirects=3
 spring.data.redis.timeout=2000ms
-spring.data.redis.database=0
 
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
