--- a/customer-service/src/main/resources/application-docker.properties
+++ b/customer-service/src/main/resources/application-docker.properties
@@ -5,13 +5,13 @@ spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:db/schema.sql
-spring.sql.init.continue-on-error=false
-spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.schema-locations=classpath:db/schema.sql
+#spring.sql.init.continue-on-error=false
+#spring.jpa.defer-datasource-initialization=true
 
 spring.data.redis.cluster.nodes=${REDIS_HOST}:6379
 spring.data.redis.cluster.max-redirects=3
