--- a/customer-service/src/main/resources/application-docker.properties
+++ b/customer-service/src/main/resources/application-docker.properties
@@ -8,7 +8,8 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.sql.init.mode=always
+spring.sql.init.mode=never
+
 #spring.sql.init.schema-locations=classpath:db/schema.sql
 #spring.sql.init.continue-on-error=false
 #spring.jpa.defer-datasource-initialization=true
