Feat: payment-order kafka 설정

--- a/order-service/src/main/resources/application-docker.properties
+++ b/order-service/src/main/resources/application-docker.properties
@@ -30,6 +30,9 @@ spring.data.redis.lettuce.pool.min-idle=${REDIS_POOL_MIN_IDLE:0}
 spring.data.redis.lettuce.pool.max-wait=-1ms
 spring.data.redis.lettuce.shutdown-timeout=100ms
 
+# Kafka (Docker)
+spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
+
 # Distributed Lock Configuration
 distributed.lock.timeout=${DISTRIBUTED_LOCK_TIMEOUT:5}
 distributed.lock.retry.count=${DISTRIBUTED_LOCK_RETRY_COUNT:3}
@@ -42,3 +45,6 @@ logging.level.com.eatcloud.orderservice=DEBUG
 logging.level.org.springframework.cloud.netflix.eureka=DEBUG
 logging.level.org.springframework.orm.jpa=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
+
+# OAuth2 Resource Server (JWT via auth-service)
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://auth-service:8081/api/v1/auth/.well-known/jwks.json
