--- a/payment-service/src/main/resources/application-docker.properties
+++ b/payment-service/src/main/resources/application-docker.properties
@@ -23,3 +23,6 @@ management.endpoint.health.show-details=always
 
 logging.level.com.eatcloud.orderservice=DEBUG
 logging.level.org.springframework.cloud.netflix.eureka=DEBUG
+
+# Kafka (Docker)
+spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
