--- a/customer-service/src/main/resources/application-docker.properties
+++ b/customer-service/src/main/resources/application-docker.properties
@@ -1,8 +1,8 @@
 server.port=8082
 spring.application.name=customer-service
 
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
-spring.datasource.username=${DB_USER}
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=create
