Feat: order-payment kafka
cart 생성, order 생성, 모의 결제, 결제 후 orderStatus 변경
테스트 완료

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -57,3 +57,6 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 # Logging
 logging.level.com.eatcloud.orderservice=DEBUG
+
+spring.kafka.consumer.properties.spring.json.use.type.headers=false
+spring.kafka.consumer.properties.spring.json.value.default.type=com.eatcloud.orderservice.event.PaymentCreatedEvent
