--- a/payment-service/src/main/resources/application-docker.properties
+++ b/payment-service/src/main/resources/application-docker.properties
@@ -18,6 +18,8 @@ spring.data.redis.port=6379
 spring.data.redis.timeout=2000ms
 spring.data.redis.database=0
 
+payment.mock.enabled=true
+
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
