--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -24,6 +24,7 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
+payment.mock.enabled=true
 # Toss Payments
 #toss.secret-key=test_sk_D4yKeq5bgrpKRd0JYbLVGX0lzW6Y
 toss.api.base-url=https://api.tosspayments.com
@@ -38,3 +39,6 @@ management.endpoint.health.show-details=always
 
 # Logging
 logging.level.com.eatcloud.paymentservice=DEBUG
+
+spring.kafka.consumer.properties.spring.json.use.type.headers=false
+spring.kafka.consumer.properties.spring.json.value.default.type=com.eatcloud.paymentservice.event.OrderCreatedEvent
