--- a/customer-service/src/main/resources/application-docker.properties
+++ b/customer-service/src/main/resources/application-docker.properties
@@ -14,8 +14,9 @@ spring.sql.init.mode=never
 #spring.sql.init.continue-on-error=false
 #spring.jpa.defer-datasource-initialization=true
 
-spring.data.redis.cluster.nodes=${REDIS_HOST}:6379
-spring.data.redis.cluster.max-redirects=3
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=6379
+spring.data.redis.ssl.enabled=true
 spring.data.redis.timeout=2000ms
 
 management.endpoints.web.exposure.include=health,info
