--- a/customer-service/src/main/resources/application-docker.properties
+++ b/customer-service/src/main/resources/application-docker.properties
@@ -4,6 +4,7 @@ spring.application.name=customer-service
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=false
@@ -18,9 +19,19 @@ spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=6379
 spring.data.redis.ssl.enabled=true
 spring.data.redis.timeout=2000ms
+spring.data.redis.lettuce.pool.max-active=8
+spring.data.redis.lettuce.pool.max-idle=8
+spring.data.redis.lettuce.pool.min-idle=0
 
+# Session Configuration
+spring.session.store-type=redis
+spring.session.redis.flush-mode=on_save
+spring.session.redis.namespace=eatcloud:session
+
+# Actuator Health Check
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+management.health.redis.enabled=true
 
 logging.level.com.eatcloud.customerservice=DEBUG
 logging.level.org.springframework.core.env=DEBUG
