--- a/admin-service/build.gradle
+++ b/admin-service/build.gradle
@@ -94,6 +94,11 @@ dependencies {
 
     implementation "org.springframework.cloud:spring-cloud-starter-loadbalancer"
 
+    implementation("org.springframework.boot:spring-boot-starter-security")
+    implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server")
+    implementation("org.springframework.security:spring-security-oauth2-jose") // Nimbus JWT 파서
+
+
     implementation(project(":auto-time"))
     implementation project(':auto-response')
 
