fix : 각 서비스 properties 수정

--- a/manager-service/src/main/resources/application-docker.properties
+++ b/manager-service/src/main/resources/application-docker.properties
@@ -1,25 +1,38 @@
 server.port=8084
 spring.application.name=manager-service
 
-eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
-eureka.instance.prefer-ip-address=false
-eureka.instance.hostname=manager-service
-
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
-spring.datasource.username=${DB_USER}
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.sql.init.mode=never
+
+#spring.sql.init.schema-locations=classpath:db/schema.sql
+#spring.sql.init.continue-on-error=false
+#spring.jpa.defer-datasource-initialization=true
 
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=6379
+spring.data.redis.ssl.enabled=true
 spring.data.redis.timeout=2000ms
-spring.data.redis.database=0
+spring.data.redis.lettuce.pool.max-active=8
+spring.data.redis.lettuce.pool.max-idle=8
+spring.data.redis.lettuce.pool.min-idle=0
 
+# Session Configuration
+spring.session.store-type=redis
+spring.session.redis.flush-mode=on_save
+spring.session.redis.namespace=eatcloud:session
+
+# Actuator Health Check
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+management.health.redis.enabled=true
 
-logging.level.com.eatcloud.orderservice=DEBUG
-logging.level.org.springframework.cloud.netflix.eureka=DEBUG
+logging.level.com.eatcloud.customerservice=DEBUG
+logging.level.org.springframework.core.env=DEBUG
+logging.level.org.springframework.boot.context.config=DEBUG
