--- a/order-service/src/main/resources/application-docker.properties
+++ b/order-service/src/main/resources/application-docker.properties
@@ -1,32 +1,43 @@
 server.port=8086
 spring.application.name=order-service
 
-eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
-eureka.instance.prefer-ip-address=false
-eureka.instance.hostname=order-service
-
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
-spring.datasource.username=${DB_USER}
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA/Hibernate ?? - ???? ??? ??
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-# SQL ??? ???? (Hibernate? ???? ??)
 spring.sql.init.mode=never
 
-# Redis Configuration
-spring.data.redis.host=${REDIS_HOST:redis}
-spring.data.redis.port=${REDIS_PORT:6379}
-spring.data.redis.timeout=${REDIS_TIMEOUT:2000}ms
-spring.data.redis.database=${REDIS_DATABASE:0}
-# Lettuce Connection Pool (Spring Boot 3.x default)
+#spring.sql.init.schema-locations=classpath:db/schema.sql
+#spring.sql.init.continue-on-error=false
+#spring.jpa.defer-datasource-initialization=true
+
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=6379
+spring.data.redis.ssl.enabled=true
+spring.data.redis.timeout=2000ms
+spring.data.redis.lettuce.pool.max-active=8
+spring.data.redis.lettuce.pool.max-idle=8
+spring.data.redis.lettuce.pool.min-idle=0
+
+# Session Configuration
+spring.session.store-type=redis
+spring.session.redis.flush-mode=on_save
+spring.session.redis.namespace=eatcloud:session
+
+# Actuator Health Check
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+management.health.redis.enabled=true
+
+logging.level.com.eatcloud.customerservice=DEBUG
+logging.level.org.springframework.core.env=DEBUG
+logging.level.org.springframework.boot.context.config=DEBUG
+
 spring.data.redis.lettuce.pool.enabled=true
-spring.data.redis.lettuce.pool.max-active=${REDIS_POOL_MAX_ACTIVE:8}
-spring.data.redis.lettuce.pool.max-idle=${REDIS_POOL_MAX_IDLE:8}
-spring.data.redis.lettuce.pool.min-idle=${REDIS_POOL_MIN_IDLE:0}
 spring.data.redis.lettuce.pool.max-wait=-1ms
 spring.data.redis.lettuce.shutdown-timeout=100ms
 
@@ -38,8 +49,6 @@ distributed.lock.timeout=${DISTRIBUTED_LOCK_TIMEOUT:5}
 distributed.lock.retry.count=${DISTRIBUTED_LOCK_RETRY_COUNT:3}
 distributed.lock.retry.delay=${DISTRIBUTED_LOCK_RETRY_DELAY:100}
 
-management.endpoints.web.exposure.include=health,info
-management.endpoint.health.show-details=always
 
 logging.level.com.eatcloud.orderservice=DEBUG
 logging.level.org.springframework.cloud.netflix.eureka=DEBUG
