fix : 배포환경에서 eureka 의존성

--- a/payment-service/src/main/resources/application-docker.properties
+++ b/payment-service/src/main/resources/application-docker.properties
@@ -3,9 +3,8 @@ spring.application.name=payment-service
 
 
 
-eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
-eureka.instance.prefer-ip-address=false
-eureka.instance.hostname=payment-service
+# Eureka disabled for ECS
+eureka.client.enabled=false
 
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
 spring.datasource.username=${DB_USER}
