--- a/auth-service/src/main/resources/application-docker.properties
+++ b/auth-service/src/main/resources/application-docker.properties
@@ -1,6 +1,9 @@
 server.port=8081
 spring.application.name=auth-service
 
+# Eureka disabled for ECS
+eureka.client.enabled=false
+
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
