Refactor: db docker 설정, 스키마, payment 인증
오류없도록 db docker 설정 변경, 스키마 엔티티에 맞게 변경
payment SecurityConfig 설정, 사용자 인증 추가

--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -54,6 +54,10 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
+	// 공통 모듈 의존성 추가
+	implementation project(':auto-time')
+	implementation project(':auto-response')
+
 	// Test Dependencies
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
