--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -51,6 +51,10 @@ dependencies {
     implementation 'com.nimbusds:nimbus-jose-jwt:9.37.3'
 
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
+
+    // 공통 모듈 의존성 추가
+    implementation project(':auto-response')
+    implementation project(':auto-time')
 }
 
 tasks.named('test') {
