--- a/auth-service/src/main/resources/application-docker.properties
+++ b/auth-service/src/main/resources/application-docker.properties
@@ -2,17 +2,19 @@ server.port=8081
 spring.application.name=auth-service
 
 # Eureka disabled for ECS
-eureka.client.enabled=false
+eureka.client.enabled=true
 
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${DB_USERNAME}
+spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=false
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.sql.init.mode=never
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.show-sql=false
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.sql.init.mode=always
+#spring.sql.init.schema-locations=classpath:db/schema.sql
+#spring.jpa.defer-datasource-initialization=false
 
 #spring.sql.init.schema-locations=classpath:db/schema.sql
 #spring.sql.init.continue-on-error=false
