--- a/customer-service/build.gradle
+++ b/customer-service/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
     implementation project(":auto-time")
+    implementation project(":auto-response")
 }
 
 tasks.named('test') {
