--- a/customer-service/src/main/resources/application.properties
+++ b/customer-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=customer-service
 
 # Database
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:customer_db}
-spring.datasource.username=${DB_USERNAME:user}
+spring.datasource.username=${DB_USER:user}
 spring.datasource.password=${DB_PASSWORD:password}
 
 # JPA
