--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.springframework.kafka:spring-kafka'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
@@ -42,6 +44,10 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+    // 공통 모듈 의존성 추가
+    implementation project(':auto-time')
+    implementation project(':auto-response')
 }
 
 tasks.named('test') {
