--- a/admin-service/src/main/resources/application.properties
+++ b/admin-service/src/main/resources/application.properties
@@ -2,7 +2,10 @@ spring.application.name=admin-service
 
 store.base-url=http://store-service
 spring.jpa.properties.hibernate.default_schema=admin
+spring.datasource.hikari.connection-init-sql=SET search_path TO admin, public
 
+# OAuth2 Resource Server (Passport JWT)
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://auth-service:8081/api/v1/auth/.well-known/jwks.json
 
 
 # Eureka
