--- a/store-service/src/main/resources/application.properties
+++ b/store-service/src/main/resources/application.properties
@@ -5,13 +5,15 @@ server.port=8085
 spring.application.name=store-service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
+spring.jpa.properties.hibernate.default_schema=stores
+
 
 admin.base-url=http://admin-service
 
 
 spring.sql.init.mode=never
 
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:store_db}
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:store_db}?currentSchema=stores
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
@@ -29,3 +31,6 @@ google.ai.api.base-url=https://generativelanguage.googleapis.com
 
 logging.level.org.springframework.data.repository=DEBUG
 logging.level.org.springframework.data.jpa.repository.query=DEBUG
+
+# OAuth2 Resource Server (Passport JWT)
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://auth-service:8081/api/v1/auth/.well-known/jwks.json
