--- a/auth-service/src/main/resources/application-docker.properties
+++ b/auth-service/src/main/resources/application-docker.properties
@@ -2,7 +2,8 @@ server.port=8081
 spring.application.name=auth-service
 
 # Eureka disabled for ECS
-eureka.client.enabled=true
+eureka.client.enabled=${EUREKA_CLIENT_ENABLED:true}
+spring.cloud.discovery.enabled=${SPRING_CLOUD_DISCOVERY_ENABLED:true}
 
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USER}
