--- a/manager-service/src/main/resources/application-docker.properties
+++ b/manager-service/src/main/resources/application-docker.properties
@@ -2,8 +2,8 @@ server.port=8084
 spring.application.name=manager-service
 
 # Eureka disabled for ECS
-eureka.client.enabled=true
-
+eureka.client.enabled=${EUREKA_CLIENT_ENABLED:true}
+spring.cloud.discovery.enabled=${SPRING_CLOUD_DISCOVERY_ENABLED:true}
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
