--- a/payment-service/src/main/resources/application-docker.properties
+++ b/payment-service/src/main/resources/application-docker.properties
@@ -4,7 +4,8 @@ spring.application.name=payment-service
 
 
 # Eureka disabled for ECS
-eureka.client.enabled=true
+eureka.client.enabled=${EUREKA_CLIENT_ENABLED:true}
+spring.cloud.discovery.enabled=${SPRING_CLOUD_DISCOVERY_ENABLED:true}
 
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
 spring.datasource.username=${DB_USER}
