--- a/manager-service/src/main/resources/application-docker.properties
+++ b/manager-service/src/main/resources/application-docker.properties
@@ -5,7 +5,7 @@ spring.application.name=manager-service
 eureka.client.enabled=${EUREKA_CLIENT_ENABLED:true}
 spring.cloud.discovery.enabled=${SPRING_CLOUD_DISCOVERY_ENABLED:true}
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${DB_USER}
+spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
