--- a/store-service/src/main/resources/application.properties
+++ b/store-service/src/main/resources/application.properties
@@ -5,20 +5,18 @@ server.port=8085
 spring.application.name=store-service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
-spring.jpa.properties.hibernate.default_schema=stores
-
 
 admin.base-url=http://admin-service
 
 
 spring.sql.init.mode=never
 
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:store_db}?currentSchema=stores
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:store_db}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
 # JPA
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
