--- a/customer-service/src/main/resources/application-docker.properties
+++ b/customer-service/src/main/resources/application-docker.properties
@@ -10,10 +10,10 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:none}
 spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.sql.init.mode=always
+spring.sql.init.mode=${SQL_INIT_MODE:always}
 spring.sql.init.schema-locations=classpath:db/schema.sql
 spring.jpa.defer-datasource-initialization=false
 
