--- a/customer-service/src/main/resources/application-docker.properties
+++ b/customer-service/src/main/resources/application-docker.properties
@@ -3,6 +3,8 @@ spring.application.name=customer-service
 
 # Eureka disabled for ECS
 eureka.client.enabled=${EUREKA_CLIENT_ENABLED:true}
+eureka.client.register-with-eureka=${EUREKA_CLIENT_ENABLED:true}
+eureka.client.fetch-registry=${EUREKA_CLIENT_ENABLED:true}
 spring.cloud.discovery.enabled=${SPRING_CLOUD_DISCOVERY_ENABLED:true}
 
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
