--- a/customer-service/src/main/resources/application-aws.properties
+++ b/customer-service/src/main/resources/application-aws.properties
@@ -23,7 +23,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 # Redis ??
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=6379
-spring.data.redis.ssl.enabled=true
+spring.data.redis.ssl.enabled=false
 spring.data.redis.timeout=2000ms
 
 # Session Configuration
