--- a/order-service/src/main/resources/application-aws.properties
+++ b/order-service/src/main/resources/application-aws.properties
@@ -12,19 +12,24 @@ spring.cloud.service-registry.auto-registration.enabled=false
 spring.autoconfigure.exclude=org.springframework.cloud.netflix.eureka.EurekaClientAutoConfiguration,org.springframework.cloud.netflix.eureka.EurekaDiscoveryClientConfiguration
 
 # ?????? ??
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/order_db
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:db/schema.sql
+spring.sql.init.continue-on-error=true
+spring.jpa.defer-datasource-initialization=true
 
 # Redis ??
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=6379
-spring.data.redis.ssl.enabled=true
+spring.data.redis.ssl.enabled=false
 spring.data.redis.timeout=2000ms
 
 # Session Configuration
