--- a/payment-service/src/main/resources/application-aws.properties
+++ b/payment-service/src/main/resources/application-aws.properties
@@ -12,25 +12,28 @@ spring.cloud.service-registry.auto-registration.enabled=false
 spring.autoconfigure.exclude=org.springframework.cloud.netflix.eureka.EurekaClientAutoConfiguration,org.springframework.cloud.netflix.eureka.EurekaDiscoveryClientConfiguration
 
 # ?????? ??
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/payment_db
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:db/schema.sql
-spring.sql.init.continue-on-error=true
-spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
+#spring.sql.init.schema-locations=classpath:db/schema.sql
+#spring.sql.init.continue-on-error=true
+#spring.jpa.defer-datasource-initialization=true
 
 # Redis ??
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=6379
 spring.data.redis.ssl.enabled=false
 spring.data.redis.timeout=2000ms
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://eatcloud-nlb-9e66dc1fdbde6200.elb.ap-northeast-2.amazonaws.com:93/.well-known/jwks.json
+
 
 # Session Configuration
 spring.session.store-type=redis
