fix : JWT URI 설정 추가

--- a/admin-service/src/main/resources/application-aws.properties
+++ b/admin-service/src/main/resources/application-aws.properties
@@ -26,6 +26,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.sql.init.continue-on-error=true
 #spring.jpa.defer-datasource-initialization=true
 
+
 # Redis ??
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=6379
@@ -47,3 +48,5 @@ management.health.readinessstate.enabled=true
 logging.level.com.netflix.discovery=OFF
 logging.level.org.springframework.cloud.netflix.eureka=OFF
 logging.level.com.eatcloud.customerservice=INFO
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://eatcloud-nlb-9e66dc1fdbde6200.elb.ap-northeast-2.amazonaws.com:93/.well-known/jwks.json
