--- a/auth-service/src/main/resources/application-aws.properties
+++ b/auth-service/src/main/resources/application-aws.properties
@@ -46,3 +46,16 @@ management.health.readinessstate.enabled=true
 logging.level.com.netflix.discovery=OFF
 logging.level.org.springframework.cloud.netflix.eureka=OFF
 logging.level.com.eatcloud.customerservice=INFO
+
+jwt.secret=${JWT_SECRET}
+
+
+#spring.mail.host=email-smtp.ap-northeast-2.amazonaws.com
+#spring.mail.port=587
+#spring.mail.username=${SES_SMTP_USERNAME}
+#spring.mail.password=${SES_SMTP_PASSWORD}
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.transport.protocol=smtp
+#spring.mail.properties.mail.debug=true
+management.health.mail.enabled=false
