--- a/store-service/src/main/resources/application-aws.properties
+++ b/store-service/src/main/resources/application-aws.properties
@@ -47,3 +47,7 @@ management.health.readinessstate.enabled=true
 logging.level.com.netflix.discovery=OFF
 logging.level.org.springframework.cloud.netflix.eureka=OFF
 logging.level.com.eatcloud.customerservice=INFO
+
+google.ai.api.base-url=${AI_URL:}
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://eatcloud-nlb-9e66dc1fdbde6200.elb.ap-northeast-2.amazonaws.com:93/.well-known/jwks.json
