--- a/auth-service/src/main/resources/application-aws.properties
+++ b/auth-service/src/main/resources/application-aws.properties
@@ -46,6 +46,8 @@ management.health.readinessstate.enabled=true
 logging.level.com.netflix.discovery=OFF
 logging.level.org.springframework.cloud.netflix.eureka=OFF
 logging.level.com.eatcloud.customerservice=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.boot.actuate=DEBUG
 
 jwt.secret=${JWT_SECRET}
 
