feat : context-path 추가

--- a/admin-service/src/main/resources/application-aws.properties
+++ b/admin-service/src/main/resources/application-aws.properties
@@ -1,6 +1,6 @@
 server.port=8083
 spring.application.name=admin-service
-
+server.servlet.context-path=/api/v1/admin
 # Eureka ?? ????
 eureka.client.enabled=false
 eureka.client.register-with-eureka=false
