--- a/customer-service/src/main/resources/application-aws.properties
+++ b/customer-service/src/main/resources/application-aws.properties
@@ -1,5 +1,6 @@
 server.port=8082
 spring.application.name=customer-service
+server.servlet.context-path=/api/v1/customer
 # Eureka ?? ????
 eureka.client.enabled=false
 eureka.client.register-with-eureka=false
@@ -35,13 +36,15 @@ spring.data.redis.timeout=2000ms
 spring.session.store-type=redis
 
 # Actuator for ELB Health Check
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=health,info,prometheus,metrics
 management.endpoint.health.show-details=when-authorized
 management.endpoints.web.base-path=/actuator
 management.endpoint.health.probes.enabled=true
 management.health.livenessstate.enabled=true
 management.health.readinessstate.enabled=true
-
+management.metrics.tags.application=${spring.application.name}
+management.metrics.tags.service=${spring.application.name}
+management.metrics.tags.environment=production
 # ??
 logging.level.com.netflix.discovery=OFF
 logging.level.org.springframework.cloud.netflix.eureka=OFF
