--- a/payment-service/src/main/resources/application-aws.properties
+++ b/payment-service/src/main/resources/application-aws.properties
@@ -1,5 +1,6 @@
 server.port=8087
 spring.application.name=payment-service
+server.servlet.context-path=/api/v1/payment
 
 # Eureka ?? ????
 eureka.client.enabled=false
@@ -39,13 +40,15 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://eatcloud-nlb-9e66dc
 spring.session.store-type=redis
 
 # Actuator for ELB Health Check
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=health,info,prometheus,metrics
 management.endpoint.health.show-details=when-authorized
 management.endpoints.web.base-path=/actuator
 management.endpoint.health.probes.enabled=true
 management.health.livenessstate.enabled=true
 management.health.readinessstate.enabled=true
-
+management.metrics.tags.application=${spring.application.name}
+management.metrics.tags.service=${spring.application.name}
+management.metrics.tags.environment=production
 # ??
 logging.level.com.netflix.discovery=OFF
 logging.level.org.springframework.cloud.netflix.eureka=OFF
