--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -52,6 +52,8 @@ dependencies {
 
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
 
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+
     // 공통 모듈 의존성 추가
     implementation project(':auto-response')
     implementation project(':auto-time')
