--- a/customer-service/build.gradle
+++ b/customer-service/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'org.springframework.security:spring-security-crypto'
 
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
     implementation project(":auto-time")
     implementation project(":auto-response")
