--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -66,6 +66,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-webflux' // MockWebServer용
 	testImplementation 'com.h2database:h2' // 인메모리 DB 테스트용
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation 'io.micrometer:micrometer-registry-prometheus'
 }
 
 tasks.named('test') {
