--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -45,6 +45,8 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+
     // 공통 모듈 의존성 추가
     implementation project(':auto-time')
     implementation project(':auto-response')
