feat : database init

--- a/manager-service/src/main/resources/application-aws.properties
+++ b/manager-service/src/main/resources/application-aws.properties
@@ -13,7 +13,7 @@ spring.cloud.service-registry.auto-registration.enabled=false
 spring.autoconfigure.exclude=org.springframework.cloud.netflix.eureka.EurekaClientAutoConfiguration,org.springframework.cloud.netflix.eureka.EurekaDiscoveryClientConfiguration
 
 # ?????? ??
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/manager_db
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -50,4 +50,4 @@ management.metrics.tags.environment=production
 # ??
 logging.level.com.netflix.discovery=OFF
 logging.level.org.springframework.cloud.netflix.eureka=OFF
-logging.level.com.eatcloud.customerservice=INFO
+logging.level.com.eatcloud.managerservice=INFO
