--- a/auth-service/src/main/resources/application-aws.properties
+++ b/auth-service/src/main/resources/application-aws.properties
@@ -12,19 +12,19 @@ spring.cloud.service-registry.auto-registration.enabled=false
 spring.autoconfigure.exclude=org.springframework.cloud.netflix.eureka.EurekaClientAutoConfiguration,org.springframework.cloud.netflix.eureka.EurekaDiscoveryClientConfiguration
 
 # ?????? ??
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/auth_db
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-#spring.sql.init.mode=always
-#spring.sql.init.schema-locations=classpath:db/schema.sql
-#spring.sql.init.continue-on-error=true
-#spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:db/schema.sql
+spring.sql.init.continue-on-error=true
+spring.jpa.defer-datasource-initialization=true
 
 # Redis ??
 spring.data.redis.host=${REDIS_HOST}
@@ -48,7 +48,7 @@ management.metrics.tags.environment=production
 # ??
 logging.level.com.netflix.discovery=OFF
 logging.level.org.springframework.cloud.netflix.eureka=OFF
-logging.level.com.eatcloud.customerservice=INFO
+logging.level.com.eatcloud.authservice=INFO
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.boot.actuate=DEBUG
 
