--- a/order-service/src/main/resources/application-aws.properties
+++ b/order-service/src/main/resources/application-aws.properties
@@ -13,7 +13,7 @@ spring.cloud.service-registry.auto-registration.enabled=false
 spring.autoconfigure.exclude=org.springframework.cloud.netflix.eureka.EurekaClientAutoConfiguration,org.springframework.cloud.netflix.eureka.EurekaDiscoveryClientConfiguration
 
 # ?????? ??
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/order_db
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -49,6 +49,6 @@ management.metrics.tags.environment=production
 # ??
 logging.level.com.netflix.discovery=OFF
 logging.level.org.springframework.cloud.netflix.eureka=OFF
-logging.level.com.eatcloud.customerservice=INFO
+logging.level.com.eatcloud.orderservice=INFO
 
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://eatcloud-nlb-9e66dc1fdbde6200.elb.ap-northeast-2.amazonaws.com:93/.well-known/jwks.json
