--- a/deploy/compose/.yml
+++ b/deploy/compose/.yml
@@ -229,7 +229,7 @@ services:
       dockerfile: customer-service/Dockerfile
     container_name: customer-service
     ports:
-      - "8082:8081"
+      - "8082:8080"
     environment:
       SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-docker}
       DB_HOST: eatcloud-db
@@ -239,11 +239,14 @@ services:
       DB_PASSWORD: ${DB_PASSWORD:-devpassword123}
       REDIS_HOST: redis
       EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
     depends_on:
       eatcloud-db:
         condition: service_healthy
       eureka-server:
         condition: service_healthy
+      kafka:
+        condition: service_started
 
   admin-service:
     <<: *service-config
